--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "server.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "mocha",
         "start": "node server.js",
         "dev": "nodemon server.js"
     },
@@ -12,12 +12,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "async-waterfall": "^0.1.5",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "chai": "^4.3.4",
         "chai-http": "^4.3.0",
-        "crypto-js": "^4.0.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-redis-cache": "^1.1.3",
